@@ -18,10 +18,9 @@ package com.purplehillsbooks.weaver.api;
 
 import java.io.InputStream;
 import java.io.Writer;
-import java.net.URL;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import java.net.URI;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 
 import com.purplehillsbooks.weaver.Cognoscenti;
 import com.purplehillsbooks.weaver.UserManager;
@@ -55,7 +54,7 @@ import com.purplehillsbooks.json.JSONTokener;
  *
  */
 @SuppressWarnings("serial")
-public class LightweightAuthServlet extends javax.servlet.http.HttpServlet {
+public class LightweightAuthServlet extends jakarta.servlet.http.HttpServlet {
 
     private static String trusterProviderUrl = "https://interstagebpm.com/eid/";
 
@@ -228,7 +227,7 @@ public class LightweightAuthServlet extends javax.servlet.http.HttpServlet {
     public static JSONObject postToTrustedProvider(String postFix, JSONObject objIn) throws Exception {
         String destUrl = trusterProviderUrl + postFix;
         APIClient client = new APIClient();
-        JSONObject response = client.postToRemote(new URL(destUrl), objIn);
+        JSONObject response = client.postToRemote(URI.create(destUrl).toURL(), objIn);
         return response;
     }
     
